# aes-android

./: .gitignore  README.md  build.gradle  settings.gradle
feature_aes/: build.gradle
feature_aes/src/main/: AndroidManifest.xml
feature_aes/src/main/cpp/: CMakeLists.txt  aes-lib.cpp  aes.c  aes.h  file_manager.cpp  file_manager.h  text.c
feature_aes/src/main/java/com/mercandalli/sdk/feature_aes/: AesModule.kt
feature_aes_java/: build.gradle
feature_aes_java/src/main/java/com/mercandalli/sdk/feature_aes_java/: AesCrypter.java  AesJavaManager.java  AesJavaManagerImpl.java  AesJavaModule.java  AesKeySize.java  AesManager.java  AesManagerImpl.java  AesMode.java  AesModule.java  AesOpMode.java  AesPadding.java
feature_aes_java/src/test/java/com/mercandalli/sdk/feature_aes_java/: AesManagerTest.java
feature_aes_kotlin/src/main/java/com/mercandalli/sdk/feature_aes_kotlin/: AesCrypter.kt  AesInitializationVectorSize.kt  AesKeySize.kt  AesKotlinManager.kt  AesKotlinModule.kt  AesManager.kt  AesMode.kt  AesModule.kt  AesOpMode.kt  AesPadding.kt
feature_aes_native/: build.gradle
feature_aes_native/src/main/: AndroidManifest.xml
feature_aes_native/src/main/cpp/: aes-lib.cpp  android_debug.h  file_manager.h
feature_aes_native/src/main/res/values/: strings.xml
feature_aes_native_sample/: build.gradle
feature_aes_sample/: build.gradle
feature_aes_sample/src/main/: AndroidManifest.xml
feature_aes_sample/src/main/res/layout/: activity_main.xml
feature_aes_sample/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
